--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
                 "trailingComma": "es5",
                 "semi": true,
                 "jsxSingleQuote": true,
+                "singleQuote": true,
                 "useTabs": true,
                 "endOfLine": "auto",
                 "max-len": ["error", { "code": 80 }]
