--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "file-loader": "^6.2.0",
+    "url-loader": "^4.1.1",
     "web-vitals": "^3.1.0"
   },
   "scripts": {
