--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.2.0",
     "url-loader": "^4.1.1",
-    "web-vitals": "^3.1.0"
+    "web-vitals": "^3.1.0",
+    "webpack": "^5.75.0"
   },
   "scripts": {
     "start": "react-scripts start",
